# pocket

./: Cargo.toml  README.md  blog-post.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  credentials.rs  fs_types.rs  index_crdt.rs  main.rs  remote_fs.rs  s3_backend.rs  service.rs  storage.rs
